--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 <body>
 
 Coming soon...
+Fast Backward with limit set to 30 seconds
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
